--- a/css/custom.css
+++ b/css/custom.css
@@ -1276,9 +1276,6 @@ a.color3:hover {
 	background-color: #e65a4b;
 	border: 1px #f76b5c solid;
 	text-transform: uppercase;
-	transition: all 0.3s ease-in-out;
-	-moz-transition: all 0.3s ease-in-out;
-	-webkit-transition: all 0.3s ease-in-out;
 }
 .product-block .product-meta .big-btns .btn:hover {
 	background-color: #f76b5c;
@@ -4232,7 +4229,7 @@ div>.row>div.twitter-block{padding-left: 15px;}
 .menu3dmega.responsive .dropdown-menu > ul > li > a {
 padding: 8px 15px;}
 .menu3dmega .flyout-menu li a {
-padding: 8px 15px;
+    padding: 8px 15px;
 }
 
 
@@ -4396,4 +4393,238 @@ line-height: 20px;
 .feature-box {
 	height: 262px;
 }
+}
+
+/*Compare item divs*/
+.product-block-nt {
+    background-color: #e65a4b;
+    overflow: hidden;
+    position: relative;
+
+
+}
+.product-block-nt .image .img {
+    display: block;
+    width: 100%;
+}
+.product-block-nt .image .img img {
+    border: 0px;
+    height: auto;
+    max-width: 100%;
+    transition: transform 0.8s;
+    vertical-align: middle;
+    width: 100%;
+}
+.product-block-nt .image .product-label {
+    color: #ffffff;
+    font-weight: 900;
+    left: 10px;
+    padding: 5px 10px;
+    position: absolute;
+    top: 10px;
+    z-index: 1;
+}
+.product-block-nt .product-meta {
+    background-color: #e65a4b;
+    bottom: 0px;
+    color: #ffffff;
+    height: 100px;
+    padding: 10px;
+    position: absolute;
+    width: 100%;
+}
+.product-block-nt .product-meta a {
+    color: #ffffff;
+    text-decoration: none;
+}
+.product-block-nt .product-meta .name {
+    display: block;
+    font-size: 15px;
+    font-weight: 600;
+    height: 23px;
+    overflow: hidden;
+    text-align: center;
+}
+.product-block-nt .product-meta .rating {
+    bottom: 0px;
+    color: #ff9e8f;
+    font-size: 13px;
+    height: 20px;
+    margin-bottom: 10px;
+    position: absolute;
+    width: auto;
+    transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+}
+.product-block-nt .product-meta .rating i {
+    display: initial;
+    border: none;
+    line-height: normal;
+    font-size: 13px;
+}
+.product-block-nt .product-meta .rating .fa {
+    color: #ff9e8f;
+}
+.product-block-nt .product-meta .rating .fa-star {
+    color: #ffffff;
+}
+.product-block-nt .product-meta .big-price {
+    -moz-transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    font-size: 35px;
+    font-weight: 900;
+    opacity: 0;
+    overflow: hidden;
+    text-align: center;
+    transition: all 0.3s ease-in-out;
+    width: 100%;
+}
+.product-block-nt .product-meta .big-price .sym {
+    font-size: 14px;
+    vertical-align: super;
+}
+.product-block-nt .product-meta .big-price .price-old {
+    font-size: 14px;
+    font-weight: 400;
+    padding-left: 10px;
+    text-decoration: line-through;
+}
+.product-block-nt .product-meta .big-price .price-old .sym {
+    font-size: 13px;
+    text-decoration: none;
+}
+.product-block-nt .product-meta .small-price {
+    bottom: 30px;
+    position: absolute;
+    display: inline-block;
+    font-size: 20px;
+    font-weight: 900;
+    height: auto;
+    opacity: 1;
+    overflow: visable;
+    width: auto;
+    transition: all 0.7s ease-in-out;
+    -moz-transition: all 0.7s ease-in-out;
+    -webkit-transition: all 0.7s ease-in-out;
+}
+.product-block-nt .product-meta .small-price .sym {
+    font-size: 14px;
+    vertical-align: super;
+}
+.product-block-nt .product-meta .small-price .price-old {
+    font-size: 14px;
+    font-weight: 400;
+    padding-left: 5px;
+    text-decoration: line-through;
+}
+.product-block-nt .product-meta .small-price .price-old .sym {
+    font-size: 13px;
+    text-decoration: none;
+}
+.product-block-nt .product-meta .small-btns {
+
+    position: relative;
+
+    border: 1px #f76b5c solid;
+}
+.product-block-nt .product-meta .small-btns .btn {
+    height: 40px;
+    line-height: 40px;
+    margin: 0px;
+    outline: none;
+    padding: 0px;
+    text-align: center;
+    width: 40px;
+    background-color: #e65a4b;
+}
+.product-block-nt .product-meta .small-btns .btn i {
+    display: initial;
+    border: none;
+    line-height: normal;
+    font-size: 13px;
+}
+
+.product-block-nt .product-meta .small-btns .btn-wishlist {
+    border-right: 1px #f76b5c solid;
+}
+.product-block-nt .product-meta .small-btns .btn-wishlist:hover {
+    background-color: #f76b5c;
+}
+.product-block-nt .product-meta .small-btns .btn-addtocart:hover {
+    background-color: #f76b5c;
+}
+.product-block-nt .product-meta .big-btns {
+    width: 100%;
+}
+.product-block-nt .product-meta .big-btns .btn {
+    background-color: #f76b5c;
+    font-size: 13px;
+    font-weight: 600;
+    height: 0px;
+    line-height: 58px;
+    margin: 0px;
+    opacity: 0;
+    overflow: hidden;
+    padding: 0px;
+    width: 50%;
+    background-color: #e65a4b;
+    border: 1px #f76b5c solid;
+    text-transform: uppercase;
+}
+.product-block-nt .product-meta .big-btns .btn:hover {
+    background-color: #f76b5c;
+}
+.product-block-nt .product-meta .big-btns .btn-view {
+    margin-left: -200px;
+}
+.product-block-nt .product-meta .big-btns .btn-addtocart {
+    border-left: none;
+    margin-right: -200px;
+}
+
+.product-block-nt .product-meta {
+    bottom: 0px;
+    height: 200px;
+    position: relative;
+}
+.product-block-nt .product-meta .big-btns .btn {
+    height: 58px;
+    opacity: 1;
+    overflow: visible;
+}
+.product-block-nt .product-meta .big-btns .btn-view {
+    margin-left: 0px;
+}
+.product-block-nt .product-meta .big-btns .btn-addtocart {
+    margin-right: 0px;
+}
+.product-block-nt .product-meta .rating {
+    margin-bottom: 20px;
+}
+.product-block-nt .product-meta .big-price {
+    height: auto;
+    opacity: 1;
+    overflow: visable;
+}
+.product-block-nt .product-meta .small-price {
+    height: 0px;
+    opacity: 0;
+    overflow: hidden;
+}
+
+.compItemTable{
+    width: 100%;
+}
+
+.compItemTable th, td {
+    border-bottom: 1px solid #f76b5c;
+}
+
+.colorSelect{
+    border-radius: 100%;
+    border: 1px solid #f5f5f5;
+    height: 20px;
+    width: 20px;
+    display: inline-block;
 }
