--- a/css/custom.css
+++ b/css/custom.css
@@ -79,7 +79,7 @@ body {
 }
 
 .char-counter input[type="text"]{
-    width:100px!important;
+    width:50px!important;
 }
 
 input {
@@ -917,6 +917,7 @@ a.color3:hover {
 .quick-message .carousel-control {
 	background-image: none !important;
 	padding-top: 7px;
+
 }
 .quick-message .carousel-inner .item {
 	text-align: center;
@@ -1020,6 +1021,7 @@ a.color3:hover {
 .box-block .box-content .box-products .carousel-controls .carousel-control {
 	font-size: 20px;
 	width: 58px;
+    padding-top: 20px;
 }
 .box-block .box-content .box-products .carousel-controls .carousel-control:hover {
 	background-color: #009edf;
@@ -1059,6 +1061,13 @@ a.color3:hover {
 .sidebar > .box-content > .carousel-controls > .left {
 	border-left: 0;
 	border-right: 1px solid #11c0ff;
+    padding-top: 20px;
+}
+
+.sidebar > .box-content > .carousel-controls > .right {
+    border-left: 0;
+    border-right: 1px solid #11c0ff;
+    padding-top: 20px;
 }
 .page-sidebar > .box-content > .carousel-controls > .left {
 	border-left: 0;
@@ -1675,6 +1684,7 @@ a.color3:hover {
 	background: #11c0ff;
 	opacity: 0.2;
 	width: 58px;
+    padding-top: 19px;
 }
 .blog-block .box-content > .carousel-controls .carousel-control:hover {
 	background: #22d1ff;
@@ -1710,10 +1720,10 @@ a.color3:hover {
 	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0px 0px 0.3333 0.3333 0.3333 0px 0px 0.3333 0.3333 0.3333 0px 0px 0px 0px 0px 1 0\'/></filter></svg>#grayscale");
 	/* Firefox 3.5+ */
 
-	filter: gray;
+
 	/* IE6-9 */
 
-	-webkit-filter: grayscale(100%);
+
 	/* Chrome 19+ & Safari 6+ */
 
 	-moz-transition: all 0.3s ease;
@@ -1723,7 +1733,7 @@ a.color3:hover {
 	transition: all 0.3s ease;
 }
 .brands-row .brand-logo:hover img {
-	-webkit-filter: grayscale(0%);
+	-webkit-filter: grayscale(60%);
 	filter: none;
 }
 .brands-row .brand-logo a {
